# StructuralEconometricPowerGrid

./: .gitignore  CLAUDE.md  Energy_CAS1 (1) (3).tex  README.md  StructuralModelAIForPowerGrid (4).tex  pyproject.toml
.github/workflows/: ci.yml
config/: blocks.yaml  network.yaml  sources.yaml  structural.yaml
notebooks/: README.md
src/sepg_struct/: __init__.py  cli.py
src/sepg_struct/counterfactual/: __init__.py  aux_market.py  base.py  byog.py  composite.py  rec_policy.py  relocation.py  supply_policy.py  technical.py
src/sepg_struct/data/: __init__.py  aterio.py  base.py  eia.py  epa_camd.py  epoch.py  iso.py  recs.py  spglobal.py  twin.py  whisker.py
src/sepg_struct/estimation/: __init__.py  equilibrium.py  result.py  stage1_shortrun.py  stage2_calibration.py  stage3_longrun.py
src/sepg_struct/utils/: __init__.py  caching.py  config.py  geo.py  io.py  logging.py  time.py
src/sepg_struct/validation/: __init__.py  cross_check.py  equilibrium_checks.py  moment_checks.py  placebo.py  pretrends.py
tests/: test_blocks.py  test_demand.py  test_equilibrium.py  test_network.py  test_smoke_cli.py  test_stage1_mapping.py
